fix: enable flex-wrap for social media links in header

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -133,6 +133,7 @@ a:hover {
   justify-content: center;
   display: flex;
   align-content: center;
+  flex-wrap: wrap;
 }
 
 @media screen and (max-width: 800px) {
